# Sonic-Mania-Decomp-Extra-Slot-Amy-WASM-port

./: CMakeLists.txt
.github/workflows/: build.yml
SonicMania/: Game.h
SonicMania/Objects/Global/: Player.c  Player.h
